# koiz-os

./: .gitignore  Dockerfile  LICENSE  Makefile.old  README.md  gdbcmds  koiz_kernel  run.sh
kernel/: Cargo.toml  Makefile  build.sh  build_grub.sh  config.h  i686-koiz_os.json  kernel_entry.asm  kernel_main.c  linker.ld  main.c
kernel/boot/: boot.asm  boot.s  gdt.asm  grub.cfg
kernel/config/: config.h
kernel/core/: interrupt_handler.c  interrupt_handler.h  mem.c  mem.h  pic.c  pic.h  vmem.c  vmem.h  x86_idt.asm  x86_pagedir.asm
kernel/drivers/: basic_io.c  basic_io.h  display.c  display.h  filesystem.c  keyboard.c  keyboard.h  serial.c  serial.h  tty.h
kernel/drivers/fs_backend/: ramdisk.c  ramdisk.h
kernel/drivers/input/: keyboard.c  keyboard.h
kernel/drivers/io/: basic_io.c  basic_io.h
kernel/drivers/irq/: idt_setup.c  idt_setup.h  interrupt_handler.asm  interrupt_handler.c  interrupt_handler.h  pic.c  pic.h  pit.asm  pit.c  pit.h  usermode.asm  x86_idt.asm
kernel/drivers/memory/: gdt.c  gdt.h  pagedir.asm  pmem.c  (+3 more)
kernel/fs/: fs.c  fs.h  ramdisk_fat16.c  ramdisk_fat16.h  ramdisk_fat16_disk.asm
kernel/libc/: malloc.c  malloc.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h
kernel/shell/: shell.c  shell.h
kernel/src/: main.rs
kernel/tests/: interrupt_tests.c  interrupt_tests.h  malloc_tests.c  malloc_tests.h  pit_tests.c  pit_tests.h  pmem_tests.c  pmem_tests.h  process_tests.c  process_tests.h  ramdisk_fat16_tests.c  ramdisk_fat16_tests.h  ramdisk_tests.c  ramdisk_tests.h  stdlib_tests.c  stdlib_tests.h  vmem_tests.c  vmem_tests.h
(+62 files in other folders)
