[package]
name = "koiz_kernel"
version = "0.1.0"
authors = ["Drakeor <drakeor.dragon@gmail.com>"]
edition = "2018"

[build]
#rustflags = ["-Z build-std"]
target = "x86_64-koiz_os.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]
